syntax = "proto3";

package secret;

service SecretService {
  rpc Ping (PingRequest) returns (PingReply) {};
}

service MysqlConfigService {
  rpc Get (SecretRequest) returns (MysqlConfig) {};
}

message MysqlConfig {
  string host = 1;
  string user = 2;
  string password = 3;
  string database = 4;
  bool multipleStatements = 5;
}

message SecretRequest {
  string apiKey = 1;
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}
